Bug 699484: Try mapping via exact unicode, then glyph name, then fuzzy.

Try different approaches in sequence if one fails to find a glyph.
Encode by glyph name before resorting to stripping '.init' style
glyph name suffixes.