source/fitz/encodings.c
@@ -32,6 +32,26 @@ int fz_windows_1251_from_unicode(int u) { FROM_UNICODE(windows_1251) }
 int fz_windows_1252_from_unicode(int u) { FROM_UNICODE(windows_1252) }
 
 int
+fz_unicode_from_glyph_name_strict(const char *name)
+{
+	int l = 0;
+	int r = nelem(single_name_list) - 1;
+
+	while (l <= r)
+	{
+		int m = (l + r) >> 1;
+		int c = strcmp(name, single_name_list[m]);
+		if (c < 0)
+			r = m - 1;
+		else if (c > 0)
+			l = m + 1;
+		else
+			return single_code_list[m];
+	}
+	return 0;
+}
+
+int
 fz_unicode_from_glyph_name(const char *name)
 {
 	char buf[64];
