source/pdf/pdf-font.c
@@ -297,6 +297,33 @@ static int lookup_mre_code(const char *name)
 	return -1;
 }
 
+static int ft_find_glyph_by_unicode_name(FT_Face face, const char *name)
+{
+	int unicode, glyph;
+
+	/* Prefer exact unicode match if available. */
+	unicode = fz_unicode_from_glyph_name_strict(name);
+	if (unicode > 0)
+	{
+		glyph = ft_char_index(face, unicode);
+		if (glyph > 0)
+			return glyph;
+	}
+
+	/* Fall back to font glyph name if we can. */
+	glyph = ft_name_index(face, name);
+	if (glyph > 0)
+		return glyph;
+
+	/* Fuzzy unicode match as last attempt. */
+	unicode = fz_unicode_from_glyph_name(name);
+	if (unicode > 0)
+		return ft_char_index(face, unicode);
+
+	/* Failed. */
+	return 0;
+}
+
 /*
  * Load font files.
  */
@@ -764,11 +791,7 @@ pdf_load_simple_font(fz_context *ctx, pdf_document *doc, pdf_obj *dict)
 				{
 					if (estrings[i])
 					{
-						int unicode = fz_unicode_from_glyph_name(estrings[i]);
-						if (unicode > 0)
-							glyph = ft_char_index(face, unicode);
-						else
-							glyph = ft_name_index(face, estrings[i]);
+						glyph = ft_find_glyph_by_unicode_name(face, estrings[i]);
 						if (glyph > 0)
 							etable[i] = glyph;
 					}
